--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
