--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.11.15",
     "lucide-react": "^0.456.0",
     "next": "14.2.15",
+    "postcss-focus-visible": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
