--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.15",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
     "next": "14.2.15",
     "postcss-focus-visible": "^10.0.1",
@@ -24,8 +24,7 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
@@ -33,10 +32,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.49",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
