--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "postcss-focus-visible": "^10.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.5",
