--- a/client/package.json
+++ b/client/package.json
@@ -20,24 +20,28 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.0",
     "@tabler/icons-react": "^3.21.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csrf": "^3.1.0",
     "framer-motion": "^11.11.17",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "lru-cache": "^10.2.0",
+    "lru-cache": "^10.4.3",
     "lucide-react": "^0.456.0",
     "next": "^14.2.15",
     "postcss-focus-visible": "^10.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@prisma/client": "^6.1.0",
@@ -49,7 +53,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/csrf": "^3.1.3",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
